# vpscheck

./: .gitignore  .upstream-hashes  README.md  SPEC.md  check.py  pyproject.toml  test_check.py
.github/workflows/: ci.yml  sync-check.yml
